<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_header"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude_hint"
        android:layout_margin="26dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/edittext_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitude_hint"
        android:layout_margin="26dp"
        app:layout_constraintTop_toBottomOf="@+id/edittext_latitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="16sp"
        android:layout_margin="26dp"
        app:layout_constraintTop_toBottomOf="@id/edittext_longitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textview_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_margin="26dp"
        app:layout_constraintTop_toBottomOf="@id/button_search"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/textview_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:layout_marginTop="26dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/textview_address"
        app:layout_constraintTop_toBottomOf="@id/button_search"/>


</androidx.constraintlayout.widget.ConstraintLayout>